--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,36 @@
  *= require_tree .
  *= require_self
  */
+
+ .api{
+   
+    &__wrapper{
+        display:flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+    }
+
+    &__platform{
+        width: 20%;
+        background:gray;
+        color:black;
+        border:1px solid black;
+        box-sizing: border-box;
+        margin-left:1%;
+    }
+
+    &__title{
+        text-align: center;
+    }
+    
+    &__info{
+        font-weight: 900;   
+        text-transform: capitalize;
+        padding-left: 3%;
+    }
+
+    &__call{
+        font-weight: 500;
+    }
+}
