DB syncs if empty

--- a/app/views/burritos_info/edit.html.erb
+++ b/app/views/burritos_info/edit.html.erb
@@ -1,2 +1,3 @@
-<h1>BurritosInfo#edit</h1>
-<p>Find me in app/views/burritos_info/edit.html.erb</p>
+<h1>Editing Info</h1>
+
+<%= render 'form', burritos_info: @burritos_info %>
