--- a/app/views/burritos_info/index.html.erb
+++ b/app/views/burritos_info/index.html.erb
@@ -1,3 +1,4 @@
+<p id="notice" class='api__notice'><%= notice %></p>
 <div class='api__wrapper'>
 <div class='api__platform'>
 <h2 class='api__title'>Platform A </h2>
@@ -26,18 +27,19 @@
 <% if @db_info != nil%>
 <p><%= @db_info.name %></p>
         <p><%= @db_info.address %></p>
-        <p><%= @db_info.adress2 %></p>
+        <p><%= @db_info.address_line_2 %></p>
         <p><%= @db_info.lat %></p>
-        <p><%= @db_info.long %></p>
-        <p><%= @db_info.category_id1 %></p>
+        <p><%= @db_info.lng %></p>
+        <p><%= @db_info.category_id %></p>
         <p><%= @db_info.category_id2 %></p>
         <p><%= @db_info.closed %></p>
         <p><%= @db_info.hours %></p>
-        <p><%= @db_info.phone %></p>
+        <p><%= @db_info.website %></p>
+        <p><%= @db_info.phone_number %></p>
 
     <% else %>
-    <button> Update DB </button>
-    <%end%>
+<%= render 'sync', burritos_info: @burrito_info %>   
+ <%end%>
 </div>
 
 
