--- a/app/views/burritos_info/_form.html.erb
+++ b/app/views/burritos_info/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_with(model: burritos_info, local: true) do |form| %>
+<%= form_for(@burritos) do |form| %>
+
 
 
   <div class="field">
@@ -13,7 +14,7 @@
 
   <div class="field">
     <%= form.label :adress2 %>
-    <%= form.text_field :adress2 %>
+    <%= form.text_field :address_line_2%>
   </div>
 
   <div class="field">
@@ -22,23 +23,18 @@
   </div>
 
   <div class="field">
-    <%= form.label :long %>
-    <%= form.text_field :long %>
+    <%= form.label :lng %>
+    <%= form.text_field :lng %>
   </div>
 
   <div class="field">
-    <%= form.label :category_id1 %>
-    <%= form.number_field :category_id1 %>
+    <%= form.label :category_id %>
+    <%= form.number_field :category_id %>
   </div>
 
   <div class="field">
     <%= form.label :category_id2 %>
     <%= form.number_field :category_id2 %>
-  </div>
-
-  <div class="field">
-    <%= form.label :category_id3 %>
-    <%= form.number_field :category_id3 %>
   </div>
 
   <div class="field">
@@ -192,7 +188,7 @@
 
   <div class="field">
     <%= form.label :phone %>
-    <%= form.text_field :phone %>
+    <%= form.text_field :phone_number %>
   </div>
 
   <div class="actions">
