--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class='container'>
+      <%= render 'layouts/shared/navbar'%>
+      <%= yield %>
+    </div>
   </body>
 </html>
