--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -2,8 +2,10 @@
   <div class='navbar__logo'>
     <h1>Burrito</h1>
   </div>
-  <div class='links'>
-    <%=link_to 'Dashboard', root, class:'navbar__link'%>
-    <%=link_to 'Edit', root, class:'navbar__link'%>
+  <div class='navbar__links'>
+    <%=link_to 'Dashboard', '/', class:'navbar__link'%>
+  </div>
+  <div class='navbar__links'>
+    <%=link_to 'Edit', '/', class:'navbar__link'%>
   </div>
 </div>
