--- a/app/views/burritos_info/_form.html.erb
+++ b/app/views/burritos_info/_form.html.erb
@@ -39,7 +39,7 @@
 
   <div class="api__field">
     <%= form.label :closed, class:'api__label' %>
-    <%= form.select :closed, options_for_select([['Open', true], ['Closed', false]]),class:'api__input'%>
+    <%= form.select :closed, options_for_select([['Open', 'true'], ['Closed', 'false']]),class:'api__input'%>
   </div>
 
   <div class="api__field">
