--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -6,6 +6,6 @@
     <%=link_to 'Dashboard', '/', class:'navbar__link'%>
   </div>
   <div class='navbar__links'>
-    <%=link_to 'Edit', '/', class:'navbar__link'%>
+    <%=link_to 'Edit', burritos_info_edit_path, class:'navbar__link'%>
   </div>
 </div>
