--- a/app/views/burritos_info/_sync.html.erb
+++ b/app/views/burritos_info/_sync.html.erb
@@ -1,3 +1,3 @@
 <%= form_with(model: burritos_info, local: true) do |form| %>
-    <%= form.button :submit, name: "info", value: sync(@platform_a, @platform_b, @platform_c)%>
+    <%= form.button :submit=> "Sync", name: "info", value: sync(@platform_a, @platform_b, @platform_c)%>
 <%end%>
