--- a/app/views/burritos_info/_form.html.erb
+++ b/app/views/burritos_info/_form.html.erb
@@ -1,3 +1,14 @@
+  <% if @burritos.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@burritos.errors.count, "error") %> prohibited this entry from being saved:</h2>
+
+      <ul>
+        <% @burritos.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
 <%= form_for(@burritos) do |form| %>
   <div class="api__field">
     <%= form.label :name, class:'api__label'%>
